[package]
name = "rexie"
version = "0.4.2"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Rexie is an easy-to-use, futures based wrapper around IndexedDB that compiles to webassembly"
homepage = "https://github.com/devashishdxt/rexie"
repository = "https://github.com/devashishdxt/rexie"
categories = ["asynchronous", "database", "wasm", "web-programming"]
keywords = ["wasm", "indexeddb", "futures", "idb", "indexed"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "tests/**/*.rs", "README.md"]
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["js"]
js = ["wasm-bindgen-futures"]

[dependencies]
js-sys = "0.3.64"
num-traits = { version = "0.2.15", default-features = false }
thiserror = "1.0.40"
tokio = { version = "1.28.2", default-features = false, features = ["sync"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = { version = "0.4.37", optional = true }
web-sys = { version = "0.3.64", features = [
  "DomException",
  "DomStringList",
  "Event",
  "IdbCursorWithValue",
  "IdbCursorDirection",
  "IdbDatabase",
  "IdbFactory",
  "IdbIndex",
  "IdbIndexParameters",
  "IdbKeyRange",
  "IdbObjectStore",
  "IdbObjectStoreParameters",
  "IdbOpenDbRequest",
  "IdbOpenDbOptions",
  "IdbRequest",
  "IdbTransaction",
  "IdbTransactionMode",
  "StorageType",
] }

[dev-dependencies]
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen-test = "0.3.37"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
