[package]
name = "rexie"
version = "0.5.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Rexie is an easy-to-use, futures based wrapper around IndexedDB that compiles to webassembly"
homepage = "https://github.com/devashishdxt/rexie"
repository = "https://github.com/devashishdxt/rexie"
categories = ["asynchronous", "database", "wasm", "web-programming"]
keywords = ["wasm", "indexeddb", "futures", "idb", "indexed"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "tests/**/*.rs", "README.md"]
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
idb = { version = "0.6.1", features = ["builder"] }
thiserror = "1.0.61"
wasm-bindgen = "0.2.92"

[dev-dependencies]
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen-test = "0.3.37"
js-sys = "0.3.69"
num-traits = { version = "0.2.19", default-features = false }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
